# hoard

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  MAINTAINERS.md  README.md  RELEASE.md  SECURITY.md  build.rs  deny.toml  test-plan-v1.0.2.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  feature.md
.github/workflows/: ci.yml  pages.yml  release.yml  scorecard.yml  security.yml
contrib/: hoard-atomic.sh  hoard.service  hoard.toml.example  hoard@.service  test-v2.toml
contrib/groups.d/: analytics.toml
contrib/nomad/: hoard-artifact.nomad  hoard-vars.nomad  hoard.nomad  sqlite-service.nomad
contrib/nomad/stress/: README.md  stress-json.nomad  stress-large.nomad  stress-logs.nomad  stress-sqlite.nomad
contrib/prometheus/: alerts.yml
docs/: _config.yml  architecture.md  configuration.md  index.md  nomad.md  operations.md  quickstart.md
docs/reference/: cli.md  control-socket.md  env-vars.md  index.md
src/: config.rs  ctl_main.rs  fd.rs  ffi.rs  hoard.rs  lib.rs  main.rs  metrics.rs  pending.rs  verify.rs
src/bpf/: hoard.bpf.c
src/cli/: ctl.rs  daemon.rs  mod.rs  nomad_restore.rs  restore.rs
src/config/: compat.rs  env.rs  mod.rs  raw.rs  registry.rs  v2.rs
src/ebpf/: debounce.rs  filter.rs  loader.rs  mod.rs  resolve.rs
src/nomad/: client.rs  meta.rs  mod.rs
src/s3/: backend.rs  gc.rs  mod.rs  sign.rs
src/trigger/: mod.rs  nomad.rs  standalone.rs
src/upload/: mod.rs  outcome.rs  pipeline.rs  retry.rs
website/: docusaurus.config.ts  mkdocs.yml  package-lock.json  package.json  sidebars.ts
website/docs/: architecture.md  configuration.md  index.md  nomad-lifecycle.md  nomad.md  operations.md  quickstart.md
website/docs/reference/: cli.md  control-socket.md  env-vars.md
website/src/css/: custom.css
website/src/plugins/: webpack-fix.js
