[package]
name = "hoard"
version = "0.5.0"
edition = "2021"
rust-version = "1.82"
description = "eBPF + io_uring daemon for zero-copy file backup to S3 under Nomad orchestration. Auto-detects SQLite databases for WAL checkpoint; transparent pass-through for all other file types."

[dependencies]
aya                    = "0.13"
tokio                  = { version = "1", features = ["rt-multi-thread", "sync", "time", "net", "signal", "fs", "io-util", "macros"] }
tokio-util             = { version = "0.7", features = ["io"] }
reqwest                = { version = "0.13", default-features = false, features = ["native-tls", "stream", "json"] }
hmac                   = "0.13"
digest                 = "0.11"
sha2                   = "0.11"
hex                    = "0.4"
zstd                   = { version = "0.13", default-features = false }
anyhow                 = "1"
chrono                 = { version = "0.4", default-features = false, features = ["clock"] }
tracing                = "0.1"
tracing-subscriber     = { version = "0.3", features = ["env-filter", "json"] }
url                    = "2"
libc                   = "0.2"
rusqlite               = { version = "0.40", features = ["bundled"] }
clap                   = { version = "4", features = ["derive", "env"] }
serde                  = { version = "1", features = ["derive"] }
serde_json             = "1"
toml                    = "1.1"
prometheus             = "0.14"
hyper                  = { version = "1", features = ["server", "http1"] }
http-body-util         = "0.1"
hyper-util             = { version = "0.1", features = ["tokio"] }
bytes                  = "1"
futures-util           = "0.3"
md5                    = "0.8"
glob                   = "0.3"
tokio-stream            = { version = "0.1", features = ["fs"] }

[build-dependencies]
cc                      = "1"    # C compiler for BPF C programs
which                   = "8"

[dev-dependencies]
trybuild               = "1"     # compile-fail tests for type-state verification
tempfile               = "3"
assert_cmd             = "2"
predicates             = "3"

[profile.release]
opt-level      = "z"
lto            = true
codegen-units  = 1
panic          = "abort"
strip          = true

[profile.dev]
opt-level      = 0
debug          = true

[[bin]]
name = "hoard"
path = "src/main.rs"

[[bin]]
name = "test-upload"
path = "src/bin/test_upload.rs"

[[bin]]
name = "hoard-atomic"
path = "src/bin/hoard_atomic.rs"
